--- a/index.html
+++ b/index.html
@@ -197,6 +197,17 @@ footer{
 
   </div>
 </section>
+  <section id="amenities">
+  <h2>Our Amenities</h2>
+  <div class="amenities-container">
+    <div class="amenity-box">Free WiFi</div>
+    <div class="amenity-box">24/7 Reception</div>
+    <div class="amenity-box">Airport Shuttle</div>
+    <div class="amenity-box">Restaurant</div>
+    <div class="amenity-box">Room Service</div>
+    <div class="amenity-box">Free Parking</div>
+  </div>
+</section>
 
 <section id="about">
   <h2 class="section-title" data-aos="fade-up">About Us</h2>
@@ -225,4 +236,5 @@ AOS.init({
 </script>
 
 </body>
+
 </html>
